--- a/Winforms/Negocio/Negocio.csproj
+++ b/Winforms/Negocio/Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="ArticulosNegocio.cs" />
     <Compile Include="CatgoriaNegocio.cs" />
+    <Compile Include="ImagenesNegocio.cs" />
     <Compile Include="MarcaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
